--- a/core/app/views/Sellings/_invalid_characters.html
+++ b/core/app/views/Sellings/_invalid_characters.html
@@ -1,45 +1,49 @@
-<div class="offset1 span9 alert alert-block" id="previewInvalidCharacters">
-  <p>各市场非法字符列表(US 和 EU 的非法字符会尝试替换成英文状态下的标点符号, 无法找到则直接删除; JP 市场因为全部都无法找到对应的可替换字符所以会直接删除.)</p>
-  <table class="table table-hover table-bordered">
-    <tr>
-      <td>市场</td>
-      <td colspan="18">列表</td>
-    </tr>
-    <tr>
-      <td>US/EU</td>
-      <td>，</td>
-      <td>。</td>
-      <td>！</td>
-      <td>（</td>
-      <td>）</td>
-      <td>——</td>
-      <td>—</td>
-      <td>、</td>
-      <td>；</td>
-      <td>‘</td>
-      <td>’</td>
-      <td>“</td>
-      <td>”</td>
-      <td>《</td>
-      <td>》</td>
-      <td>？</td>
-      <td>【</td>
-      <td>】</td>
-    </tr>
-    <tr>
-      <td>JP</td>
-      <td>——</td>
-      <td>—</td>
-      <td>✦</td>
-      <td>•</td>
-      <td>◉</td>
-      <td>⦿</td>
-      <td>▷</td>
-      <td>▶</td>
-      <td>❏</td>
-      <td>❒</td>
-      <td>♫</td>
-      <td colspan="10">®</td>
-    </tr>
-  </table>
+<div class="box box-warning" id="previewInvalidCharacters">
+  <div class="box-header">
+    <h5 class="box-title">各市场非法字符列表(US 和 EU 的非法字符会尝试替换成英文状态下的标点符号, 无法找到则直接删除; JP 市场因为全部都无法找到对应的可替换字符所以会直接删除.)</h5>
+  </div>
+  <div class="box-body">
+    <table class="table table-hover table-bordered">
+      <tr>
+        <td>市场</td>
+        <td colspan="18">列表</td>
+      </tr>
+      <tr>
+        <td>US/EU</td>
+        <td>，</td>
+        <td>。</td>
+        <td>！</td>
+        <td>（</td>
+        <td>）</td>
+        <td>——</td>
+        <td>—</td>
+        <td>、</td>
+        <td>；</td>
+        <td>‘</td>
+        <td>’</td>
+        <td>“</td>
+        <td>”</td>
+        <td>《</td>
+        <td>》</td>
+        <td>？</td>
+        <td>【</td>
+        <td>】</td>
+      </tr>
+      <tr>
+        <td>JP</td>
+        <td>——</td>
+        <td>—</td>
+        <td>✦</td>
+        <td>•</td>
+        <td>◉</td>
+        <td>⦿</td>
+        <td>▷</td>
+        <td>▶</td>
+        <td>❏</td>
+        <td>❒</td>
+        <td>♫</td>
+        <td colspan="10">®</td>
+      </tr>
+    </table>
+  </div>
 </div>
