--- a/core/app/views/tags/records_v3.html
+++ b/core/app/views/tags/records_v3.html
@@ -1,4 +1,4 @@
-<div class="box box-warning box-solid">
+<div class="box box-warning">
   <div class="box-header with-border">
   #{ifnot _notitle}
     <h3 class="box-title" rel="tooltip" title="最近的 50 条记录"><i class="icon-question-sign"></i>
