* 物料计划修改记录（修改数量）优化日志

--- a/core/app/views/MaterialUnits/index.html
+++ b/core/app/views/MaterialUnits/index.html
@@ -84,7 +84,7 @@
   </div>
   <div class="modal-body">
     <form action="@{MaterialUnits.updateMaterialUnit()}" method="post" id="updateUnit_form">
-      <input type="hidden" name="unit.id" id="unit_id">
+      <input type="hidden" name="matId" id="unit_id">
       <input type="hidden" name="updateType" value="MaterialUnitIndex">
       <table class="table table-condensed table-bordered">
         <tr>
