--- a/core/app/views/MaterialPlans/index.html
+++ b/core/app/views/MaterialPlans/index.html
@@ -141,7 +141,7 @@
   </div>
   <div class="modal-body">
     <form action="@{MaterialPlans.updateMaterialPlanUnit()}" method="post" id="updateUnit_form">
-      <input type="hidden" name="unit.id" id="unit_id">
+      <input type="hidden" name="matId" id="unit_id">
       <table class="table table-condensed table-bordered">
         <tr>
           <th width="30%">实际签收数量</th>
