--- a/core/app/views/MaterialPlans/show.html
+++ b/core/app/views/MaterialPlans/show.html
@@ -14,9 +14,6 @@
 #{info_row title:'物料出货单信息'/}
 
 <div class="row-fluid">
-
-  <div class="tab-content">
-    <div class="tab-pane fade active in" id='currentPage'>
       <form action="@{MaterialPlans.update()}" method="post" name="updateDeliverymentForm" id="updateDeliverymentForm">
         <table class="table table-condensed table-bordered">
           <tr>
@@ -118,8 +115,6 @@
           </tr>
         </table>
       </form>
-    </div>
-  </div>
 </div>
 
 #{success_row title:"已经添加进入[物料出货单]的[出货单元] "/}
@@ -223,7 +218,7 @@
   </div>
   <div class="modal-body">
     <form action="@{MaterialPlans.updateMaterialPlanUnit()}" method="post" id="updateUnit_form">
-      <input type="hidden" name="unit.id" id="unit_id">
+      <input type="hidden" name="matId" id="unit_id">
       <table class="table table-condensed table-bordered">
         <tr>
           <th width="30%">实际签收数量</th>
