--- a/core/app/views/Cooperators/_items.html
+++ b/core/app/views/Cooperators/_items.html
@@ -12,22 +12,22 @@
 #{list items:items, as:'itm'}
   <tr>
     <td>${itm.id}</td>
-    <td rel="popover" content="${itm.memo}">${itm.sku}</td>
+    <td data-toggle="tooltip" title="${itm.memo}">${itm.sku}</td>
     <td>${itm.price.format('#.##')} ${itm.currency}</td>
     <td>${itm.period}</td>
     <td>${itm.boxSize}</td>
     <td>${itm.lowestOrderNum}</td>
     <td style="color:${itm.status.rgb()}">${itm.status?.label()}</td>
     <td>
-      <a href="@{Cooperators.editCooperItem(itm.id)}" class="btn btn-sm"><i class="icon-pencil"></i></a>
+      <a href="@{Cooperators.editCooperItem(itm.id)}" class="btn btn-xs btn-info"><i class="icon-pencil"></i></a>
       <a href="@{Cooperators.removeCooperItemById(itm.id)}" class="btn btn-xs btn-danger" rel="tooltip"
          name="itemDel" title="删除"><i class="icon-trash"></i></a>
       
       #{power.ck 'cooperitem.skuauditing'}
           #{if itm.status?.name() != 'Agree'}
-            <a class="btn btn-sm" style="color:green;" rel="tooltip" title="审核通过"
+            <a class="btn btn-xs" style="color:green;" rel="tooltip" title="审核通过"
                href="@{Cooperators.agreeCooperItem(itm.id)}"><i class="icon-ok"></i></a>
-            <a class="btn btn-sm" style="color:red;" rel="tooltip" title="审核不通过"
+            <a class="btn btn-xs" style="color:red;" rel="tooltip" title="审核不通过"
                href="@{Cooperators.disAgreeCooperItem(itm.id)}"><i class="icon-remove"></i></a>
           #{/if}
       #{/power.ck}
@@ -37,7 +37,7 @@
   <!-- 为此供应商关联新的产品 -->
   <tr>
     <td colspan="8">
-      <a href="@{Cooperators.newCooperItem(null, coper.id)}" class="btn btn-sm btn-primary">
+      <a href="@{Cooperators.newCooperItem(null, coper.id)}" class="btn btn-xs btn-warning">
         为[${coper.fullName}]添加新的生产的产品</a>
     </td>
   </tr>
