--- a/core/app/views/MaterialPlans/index.html
+++ b/core/app/views/MaterialPlans/index.html
@@ -20,14 +20,14 @@
             <div class="form-group">
               <div class="input-group">
                 <div class="input-group-addon">From:</div>
-                <input style="width:100px;" class="form-control" id="date_from" name="p.from" value="${p.from.date()}">
+                <input style="width:100px;" class="form-control" role="date" name="p.from" value="${p.from.date()}">
               </div>
             </div>
 
             <div class="form-group">
               <div class="input-group">
                 <div class="input-group-addon">To:</div>
-                <input style="width:100px;" class="form-control" id="date_to" name="p.to" value="${p.to.date()}">
+                <input style="width:100px;" class="form-control" role="date" name="p.to" value="${p.to.date()}">
               </div>
             </div>
 
@@ -91,7 +91,7 @@
               <td style="cursor:pointer;" data-url="@{MaterialPlans.showMaterialPlanUnitList(dp.id)}" data-id="${dp.id}" name="clickTd">
                 <span><i class="icon-reorder"></i></span>
                 <span>${dp.name}</span>
-                <span class="badge badge-info">${dp.units.size()}</span>
+                <span class="badge bg-light-blue">${dp.units.size()}</span>
               </td>
               <td>
                   #{if dp.apply}
@@ -116,9 +116,9 @@
                   ${dp.financeState?.label()}
                   #{/else}
               </td>
-              <td>#{time_tooltip time:dp.deliveryDate, datetime:true/}</td>
+              <td>#{time_tooltip_v3 time:dp.deliveryDate, datetime:true/}</td>
               <td>${dp.handler.username}</td>
-              <td>#{time_tooltip time:dp.createDate/}</td>
+              <td>#{time_tooltip_v3 time:dp.createDate/}</td>
             </tr>
           #{/list}
           </table>
