--- a/core/app/views/MaterialPurchases/index.html
+++ b/core/app/views/MaterialPurchases/index.html
@@ -6,8 +6,6 @@
     #{script 'procureunits/_unit_list.coffee'/}
 #{/set}
 
-#{info_row}
-#{/info_row}
 #{flash_alert /}
 #{errorMsgs /}
 
@@ -21,14 +19,14 @@
             <div class="form-group">
               <div class="input-group">
                 <div class="input-group-addon">From:</div>
-                <input style="width:100px;" class="form-control" id="date_from" name="p.from" value="${p.from.date()}">
+                <input style="width:100px;" class="form-control" role="date" name="p.from" value="${p.from.date()}">
               </div>
             </div>
 
             <div class="form-group">
               <div class="input-group">
                 <div class="input-group-addon">To:</div>
-                <input style="width:100px;" class="form-control" id="date_to" name="p.to" value="${p.to.date()}">
+                <input style="width:100px;" class="form-control" role="date" name="p.to" value="${p.to.date()}">
               </div>
             </div>
 
@@ -53,18 +51,15 @@
             </div>
             <button class="btn btn-primary" data-loading>搜索</button>
 
-
             <div class="inline">
-              <a target="_blank" class="btn btn-primary" href='@{MaterialPurchases.blank()}'>
+              <a target="_blank" class="btn btn-warning" href='@{MaterialPurchases.blank()}'>
                 <i class="icon-plus"></i>新增物料手动单
               </a>
-
               <a href="@{Excels.deliveryments(p)}" class="btn btn-success" target="_blank">
                 <i class="icon-download-alt"></i>下载Excel</a>
             </div>
           </div>
         </div>
-
 
         <div class="box-body">
           <table class="table table-condensed table-bordered">
@@ -91,16 +86,15 @@
               <td style="cursor:pointer;" data-url="@{MaterialPurchases.showMaterialUnitList(dmt.id)}" data-id="${dmt.id}" name="clickTd">
                 <span><i class="icon-reorder"></i></span>
                 <span>${dmt.name}</span>
-                <span class="badge badge-info">${dmt.units.size()}</span>
+                <span class="badge bg-light-blue">${dmt.units.size()}</span>
               </td>
 
               <td>${dmt.supplier()?.name}</td>
               <td style="color:${dmt.state?.rgb()}">${dmt.state.label()}</td>
               <td>${dmt.deliveryType?.label()}</td>
               <td>${dmt.handler.username}</td>
-              <td>#{time_tooltip time:dmt.createDate/}</td>
+              <td>#{time_tooltip_v3 time:dmt.createDate/}</td>
             </tr>
-
           #{/list}
           </table>
         </div>
