--- a/core/app/views/MaterialPlans/index.html
+++ b/core/app/views/MaterialPlans/index.html
@@ -18,10 +18,30 @@
         <input type="date" name="p.to" value="${p.to.date()}">
       </div>
 
+      <select name="p.dateType" style="width: 150px;" class="inline">
+      #{list items:models.view.post.MaterialPlanPost.DateType.values(), as:'d'}
+        <option value="${d.name()}" ${d.name() == p.dateType.name()? 'selected' : ''}>${d.label()}</option>
+      #{/list}
+      </select>
+
       <select name="p.cooperId" class="inline selectize" style="width:150px;">
         <option value="">供应商</option>
       #{list items:suppliers, as:'sp'}
         <option ${sp.id == p.cooperId ? 'selected' : ''} value="${sp.id}">${sp.name}</option>
+      #{/list}
+      </select>
+
+      <select name="p.receipt" style="width: 150px;" class="inline">
+        <option value="">收货类型</option>
+      #{list items:models.material.MaterialPlan.R.values(), as:'d'}
+        <option value="${d.name()}" ${d.name() == p.receipt?.name()? 'selected' : ''}>${d.label()}</option>
+      #{/list}
+      </select>
+
+      <select name="p.financeState" style="width: 150px;" class="inline">
+        <option value="">财务审核</option>
+      #{list items:models.material.MaterialPlan.S.values(), as:'d'}
+        <option value="${d.name()}" ${d.name() == p.financeState?.name()? 'selected' : ''}>${d.label()}</option>
       #{/list}
       </select>
 
@@ -94,13 +114,13 @@
           <td>${dp.receipt?.label()}</td>
           <td>${dp.receiveCooperator?.name}</td>
           <td>
-              #{if dp.financeState.name() == financeState.name()}
+              #{if dp.financeState.name() == "PENDING_REVIEW"}
                   #{power.ck "materialplans.approve"}
                     <!-- 只有出货单状态在 已出货 并且财务未审核的情况下 才出现财务审核的按钮 -->
                     <a href="javascript:void(0)" name="approveBtn" data-url='@{MaterialPlans.approve(dp.id)}'
                        class="btn btn-mini btn-warning" uid="${dp.id}">审核</a>
                   #{/power.ck}
-                待审
+                待审核
               #{/if}
               #{else}
               ${dp.financeState?.label()}
