--- a/core/app/views/Applys/material.html
+++ b/core/app/views/Applys/material.html
@@ -52,8 +52,8 @@
     <dl class="dl-horizontal">
       <dt>#</dt>
       <dd><a href="@{MaterialPlans.show(dmt.id)}" target="_blank">${dmt.id}</a></dd>
-      <dt>状态</dt>
-      <dd style="color:${dmt.state.rgb()}">${dmt.state.label()}</dd>
+      <dt>审核状态</dt>
+      <dd style="color:${dmt.financeState.rgb()}">${dmt.financeState.label()}</dd>
       <dt>供应商</dt>
       <dd>${dmt.cooperator.fullName}</dd>
       <dt>创建时间</dt>
