--- a/core/app/views/Cooperators/newCooperItem.html
+++ b/core/app/views/Cooperators/newCooperItem.html
@@ -30,16 +30,20 @@
         <td>
           <input type="text" id='copItem_sku' name="copItem.sku" data-provide="typeahead" data-source="${skus}" placeHolder="填写 SKU" value="${copItem.sku}">
           <input type="hidden" name="cooperId" value="${cop.id}">
-          <input type="hidden" name="copItem.id" value="${copItem.id}">
+          <input type="hidden" name="copItemId" value="${copItem.id}">
         #{authenticityToken /}
         </td>
 
         <th>价格</th>
         <td>
           <div class="inline">
-            <input class="input input-mini" type="text" name="copItem.price" value="${copItem.price}">
+            <input class="input input-mini" type="text" name="copItem.price" readonly='true' value="${copItem.price}">
           #{pickCurrency name:'copItem.currency', c:copItem.currency, class:'input-mini'/}
           </div>
+          #{power.ck "cooperitem.price"}
+             <!-- ea系统关闭个人价格更新权限，仅有指定角色可进行更改 -->
+            <input type="hidden" id="priceFlag" value="1">
+          #{/power.ck}
         </td>
       </tr>
       <tr>
@@ -188,4 +192,11 @@
       <td><input type="text" name="copItem.items[<%= num%>].schemeName"></td>
     </tr>
   </table>
+</script>
+
+<script>
+  var priceFlag  =  $("#priceFlag").val();
+  if (priceFlag == 1){
+    $("input[name='copItem.price']").attr({'readOnly':false});
+  }
 </script>
