* sku、物料价格的修改（修改人、修改时间、修改前后价格）优化日志

--- a/core/app/views/Cooperators/newMaterialItem.html
+++ b/core/app/views/Cooperators/newMaterialItem.html
@@ -34,7 +34,7 @@
           #{/list}
           </select>
           <input type="hidden" name="cooperId" value="${cop.id}">
-          <input type="hidden" name="copItem.id" value="${copItem.id}">
+          <input type="hidden" name="copItemId" value="${copItem.id}">
         #{authenticityToken /}
         </td>
 
