* 新增  合作伙伴的物料与sku的Records日志导出功能

--- a/core/app/views/Cooperators/index.html
+++ b/core/app/views/Cooperators/index.html
@@ -25,6 +25,7 @@
           <button class="btn btn-primary" data-loading>搜索</button>
         </div>
         <a href="@{Cooperators.newCooper()}" class="btn btn-success">添加新合作伙伴</a>
+        <a href="@{Excels.exportCooperItemLogs()}" class="btn btn-success"> 下载日志</a>
       </div>
     </div>
   </form>
