* 供应商添加sku页面去除价格权限控制

--- a/core/app/views/Cooperators/newCooperItem.html
+++ b/core/app/views/Cooperators/newCooperItem.html
@@ -29,8 +29,8 @@
         <th>SKU</th>
         <td>
           <input type="text" id='copItem_sku' name="copItem.sku" data-provide="typeahead" data-source="${skus}" placeHolder="填写 SKU" value="${copItem.sku}">
-          <input type="hidden" name="cooperId" value="${cop.id}">
-          <input type="hidden" name="copItemId" value="${copItem.id}">
+          <input type="hidden" name="cooperId"  value="${cop.id}">
+          <input type="hidden" name="copItemId" id="copItemId" value="${copItem.id}">
         #{authenticityToken /}
         </td>
 
@@ -196,7 +196,11 @@
 
 <script>
   var priceFlag  =  $("#priceFlag").val();
-  if (priceFlag == 1){
+  var copItemId  =   $("#copItemId").val();    //获取cooperId ,为空代表新增,那么不做限制
+  if (priceFlag == 1 ){
     $("input[name='copItem.price']").attr({'readOnly':false});
+  }
+  if (copItemId == '' ){
+      $("input[name='copItem.price']").attr({'readOnly':false});
   }
 </script>
