*  产品页，sku信息sku字段文字显示为Category

--- a/core/app/views/Products/_basicInfo.html
+++ b/core/app/views/Products/_basicInfo.html
@@ -5,7 +5,7 @@
       <div class="box-body">
         <form action="@{Products.update()}" method="post" id="update_product_form" class="form-horizontal">
           <div class="form-group">
-            <label for="p_sku" class="col-sm-1 control-label">Category</label>
+            <label for="p_sku" class="col-sm-1 control-label">SKU</label>
             <div class="col-sm-2">
               <input class="form-control" value="${pro.sku}" id="p_sku" name="pro.sku" readonly>
             </div>
