*  产品页，删除物流信息页签内容

--- a/core/app/views/Products/show.html
+++ b/core/app/views/Products/show.html
@@ -32,7 +32,7 @@
     <div class="nav-tabs-custom">
       <ul class="nav nav-tabs">
         <li class="active"><a href="#basicinfo" data-toggle='tab'>基本信息</a></li>
-        <li><a href="#extends" data-toggle='tab'>物流信息</a></li>
+        <!-- <li><a href="#extends" data-toggle='tab'>物流信息</a></li> -->
         <li><a href="#newattach" data-toggle='tab'>附件管理</a></li>
         <li><a href="#saleinfo" data-toggle='tab' id="skuSaleInfo">销售信息</a></li>
         <li><a href="#procureinfo" data-toggle='tab' id="skuProcureInfo">采购信息</a></li>
