--- a/core/app/views/MaterialPlans/index.html
+++ b/core/app/views/MaterialPlans/index.html
@@ -163,26 +163,32 @@
 </div>
 
 <!--  修改签收数量 弹出div begin   -->
-<div id="bom_modal" class="modal hide fade">
-  <div class="modal-header">
-    <h4>签收数量修改</h4>
-  </div>
-  <div class="modal-body">
-    <form action="@{MaterialPlans.updateMaterialPlanUnit()}" method="post" id="updateUnit_form">
-      <input type="hidden" name="matId" id="unit_id">
-      <table class="table table-condensed table-bordered">
-        <tr>
-          <th width="30%">实际签收数量</th>
-          <td>
-            <input type="text" placeHolder="实际签收数量" id="unit_receiptQty" name="unit.receiptQty">
-          </td>
-        </tr>
-      </table>
-    </form>
-  </div>
-  <div class="modal-footer">
-    <button class="btn" data-dismiss="modal" aria-hidden="true">关闭</button>
-    <button class="btn btn-primary" id="submitUpdateBtn">提交</button>
+<div id="bom_modal" class="modal fade bs-example-modal-lg">
+  <div class="modal-dialog modal-lg" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h4>签收数量修改</h4>
+      </div>
+      <div class="modal-body">
+        <form action="@{MaterialPlans.updateMaterialPlanUnit()}" method="post" id="updateUnit_form">
+          <input type="hidden" name="matId" id="unit_id">
+          <table class="table table-condensed table-bordered">
+            <tr>
+              <th width="30%">实际签收数量</th>
+              <td>
+                <input type="text" placeHolder="实际签收数量" id="unit_receiptQty" name="unit.receiptQty">
+              </td>
+            </tr>
+          </table>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button class="btn" data-dismiss="modal" aria-hidden="true">关闭</button>
+        <button class="btn btn-primary" id="submitUpdateBtn">提交</button>
+      </div>
+    </div>
   </div>
 </div>
 <!--  修改签收数量 弹出div end   -->
+
+
