--- a/core/app/views/Materials/index.html
+++ b/core/app/views/Materials/index.html
@@ -67,7 +67,7 @@
               <td>
                 <a href="@{Materials.edit(m.id)}" class="btn btn-xs btn-primary">编辑</a>
                 <a href="javascript:void(0)" data-url='@{Materials.deleteMaterial(m.id)}' uid="${m.id}"
-                   name="delBtn" class="btn btn-mini btn-danger">下架</a>
+                   name="delBtn" class="btn btn-xs btn-danger">下架</a>
               </td>
             </tr>
           #{/list}
