--- a/core/app/views/Inbounds/boxInfo.html
+++ b/core/app/views/Inbounds/boxInfo.html
@@ -32,36 +32,45 @@
       <input type="hidden" name="units[${unit_index-1}].id" value="${unit.id}">
     </td>
     <td>
-      <input type='text' style='width: 30px;' name='units[${unit_index-1}].mainBox.boxNum' value='${unit.mainBox?.boxNum}'/>
+      <input type='text' style='width: 40px;' name='units[${unit_index-1}].mainBox.boxNum'
+             value='${unit.mainBox?.boxNum}'/>
     </td>
     <td>
       <input type='text' style='width: 60px;' name='units[${unit_index-1}].mainBox.singleBoxWeight' value='${unit.mainBox?.singleBoxWeight}'/>
     </td>
     <td>
-      <input type='text' style='width: 30px;' name='units[${unit_index-1}].mainBox.length' value='${unit.mainBox?.length}'/>
+      <input type='text' style='width: 40px;' name='units[${unit_index-1}].mainBox.length'
+             value='${unit.mainBox?.length}'/>
     </td>
     <td>
-      <input type='text' style='width: 30px;' name='units[${unit_index-1}].mainBox.width' value='${unit.mainBox?.width}'/>
+      <input type='text' style='width: 40px;' name='units[${unit_index-1}].mainBox.width'
+             value='${unit.mainBox?.width}'/>
     </td>
     <td>
-      <input type='text' style='width: 30px;' name='units[${unit_index-1}].mainBox.height' value='${unit.mainBox?.height}'/>
+      <input type='text' style='width: 40px;' name='units[${unit_index-1}].mainBox.height'
+             value='${unit.mainBox?.height}'/>
     </td>
-    <td><input type='text' style='width: 30px;' name='units[${unit_index-1}].lastBox.num' value='${unit.lastBox?.num}'/>
+    <td><input type='text' style='width: 40px;' name='units[${unit_index-1}].lastBox.num'
+               value='${unit.lastBox?.num}'/>
     </td>
     <td>
-      <input type='text' style='width: 30px;' name='units[${unit_index-1}].lastBox.boxNum' value='${unit.lastBox?.boxNum}'/>
+      <input type='text' style='width: 40px;' name='units[${unit_index-1}].lastBox.boxNum'
+             value='${unit.lastBox?.boxNum}'/>
     </td>
     <td>
       <input type='text' style='width: 60px;' name='units[${unit_index-1}].lastBox.singleBoxWeight' value='${unit.lastBox?.singleBoxWeight}'/>
     </td>
     <td>
-      <input type='text' style='width: 30px;' name='units[${unit_index-1}].lastBox.length' value='${unit.lastBox?.length}'/>
+      <input type='text' style='width: 40px;' name='units[${unit_index-1}].lastBox.length'
+             value='${unit.lastBox?.length}'/>
     </td>
     <td>
-      <input type='text' style='width: 30px;' name='units[${unit_index-1}].lastBox.width' value='${unit.lastBox?.width}'/>
+      <input type='text' style='width: 40px;' name='units[${unit_index-1}].lastBox.width'
+             value='${unit.lastBox?.width}'/>
     </td>
     <td>
-      <input type='text' style='width: 30px;' name='units[${unit_index-1}].lastBox.height' value='${unit.lastBox?.height}'/>
+      <input type='text' style='width: 40px;' name='units[${unit_index-1}].lastBox.height'
+             value='${unit.lastBox?.height}'/>
     </td>
   </tr>
   <tr style="display:none;">
