* 升级 运输单 包装信息 bootstrap3弹出层

--- a/core/app/views/Shipments/index.html
+++ b/core/app/views/Shipments/index.html
@@ -122,11 +122,23 @@ ${totalUnReadNum}
     </div>
   </div>
 </div>
-<div id="fba_carton_contents_modal" class="modal hide fade" style="width:1000px; left: 40%;">
-  <div class="modal-body">
-    <div id="refresh_div"></div>
-  </div>
-  <div class="modal-footer">
-    <button class="btn" data-dismiss="modal" aria-hidden="true">关闭</button>
+
+
+<!--  修改签收数量 弹出div begin   -->
+<div id="fba_carton_contents_modal" class="modal fade bs-example-modal-lg">
+  <div class="modal-dialog modal-lg" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h4>签收数量修改</h4>
+      </div>
+      <div class="modal-body" id="refresh_div">
+        
+      </div>
+      <div class="modal-footer">
+        <button class="btn" data-dismiss="modal" aria-hidden="true">关闭</button>
+      </div>
+    </div>
   </div>
 </div>
+<!--  修改签收数量 弹出div end   -->
+
