--- a/core/app/views/Deliveryments/_box_number_model.html
+++ b/core/app/views/Deliveryments/_box_number_model.html
@@ -3,7 +3,7 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-        <h3>采购单元箱数</h3>默认为1，最大值为999
+        <h4 class="modal-title">采购单元箱数</h4>默认为1，最大值为999
       </div>
       <div class="modal-body">
         <table class="table table-bordered table-condensed" id="box_number_table">
